# SW-GRIST

./: .gitignore  README.md
GRIST/: README.md
GRIST-OPT/: .gitignore  BUILD.txt  ParGRIST.sublime-workspace  README.md
GRIST-OPT/bld/: .Makefile.sub.swp  Macros.archliunx  Macros.mixed_sunway_xfort  Macros.opt_mixed_sunway_xfort  Macros.sunway_xfort  Makefile  Makefile.sub  build-cpe-dp.sh  build-cpe-mixed.sh
GRIST-OPT/data/: README.md
GRIST-OPT/scripts/: README
GRIST-OPT/src-main/atmosphere/dynamics/dycore/hpe/: CMakeLists.txt  grist_hpe_constants.F90  grist_hpe_continuity.F90  grist_hpe_hydro_pgf.F90  grist_hpe_vertical_advection.F90
GRIST-OPT/src-main/infrastructure/namelist/: CMakeLists.txt  grist_nml_module.F90  grist_wrfphys_nml_module.F90
GRIST-OPT/src_mixed_new/infrastructure/operators/: CMakeLists.txt  grist_base_flux_module.F90  grist_math_module.F90  grist_mesh_weight_icosh.F90
GRIST-OPT/src_mixed_new/swe/: CMakeLists.txt  swe_init_module.F90  swe_inout_module.F90  swe_restart_module.F90
GRIST-OPT/src_mixed_new/swe/operator/: grist_ffsl_flux_module.F90  grist_flux_operators.F90  grist_hori_swe_module.F90  grist_recon_module.F90
GRIST/bld/: .Jstack_6235182_202407051614.res  .Jstack_6235228_202407051648.res  Macros.mixed_sunway_xfort  Macros.opt_mixed_sunway_xfort  Macros.sunway  Macros.sunway_xfort  Makefile  Makefile.sub  build-mpe-dp.sh  build-mpe-mixed.sh
GRIST/run/: readme
GRIST/scripts/: slimGridFile.sh
GRIST/src-main/: CMakeLists.txt
GRIST/src-main/atmosphere/dynamics/dycore/nhd/: CMakeLists.txt  grist_nh_driver_module.F90  grist_nh_explicit_tend_module_2d.F90  grist_tridiagonal_solver.F90
GRIST/src-main/atmosphere/physics/: CMakeLists.txt
GRIST/src-main/atmosphere/physics/amipc_physics/: grist_physics_iofile.F90  grist_physics_update.F90  grist_physpkg_cam5based.F90
GRIST/src-main/atmosphere/physics/amipc_physics/chemistry_aero/: grist_modal_aero_calcsize.F90
GRIST/src-main/atmosphere/physics/amipc_physics/lin_micro_macro/: grist_macrop_lin.F90  micro_mg1_5_lin.F90
GRIST/src-main/atmosphere/physics/amipc_physics/macro_micro_phys/: grist_conv_water.F90  grist_macrop.F90  grist_ndrop.F90  grist_phys_prop.F90  grist_rad_constituents.F90  nucleate_ice.F90
GRIST/src-main/atmosphere/physics/amipc_physics/rrtmg_4DDA/: radsw.F90  rrtmg_state.F90
GRIST/src-main/atmosphere/physics/amipc_physics/rrtmg_4DDA/ext/: log
GRIST/src-main/atmosphere/physics/amipc_physics/rrtmg_4DDA/ext/rrtmg_lw/: rrlw_cld.F90  rrlw_kg02.F90  rrlw_kg03.F90  rrlw_kg04.F90  rrlw_kg14.F90  rrlw_kg16.F90  rrlw_tbl.F90  rrlw_wvn.F90  rrtmg_lw_setcoef.F90
GRIST/src-main/atmosphere/physics/amipc_physics/rrtmg_4DDA/ext/rrtmg_mcica/: rrtmg_lw_rad.F90  rrtmg_lw_rtrnmc.F90  rrtmg_sw_cldprmc.F90  rrtmg_sw_rad.F90
GRIST/src-main/atmosphere/physics/amipc_physics/rrtmg_4DDA/ext/rrtmg_sw/: rrsw_con.F90  rrsw_kg16.F90  rrsw_kg17.F90  rrsw_kg23.F90  rrsw_kg29.F90  rrsw_tbl.F90  rrtmg_sw_cldprop.F90  rrtmg_sw_taumol.F90
GRIST/src-main/atmosphere/physics/amipc_physics/shallow_convection/: grist_shallow_convection.F90
GRIST/src-main/atmosphere/physics/amipc_physics/share/: grist_shr_spfn.F90
GRIST/src-main/atmosphere/physics/amipc_physics/vertical_diffusion/: grist_eddy_diff.F90  grist_pbl_utils.F90
GRIST/src-main/atmosphere/physics/amipw_physics/: grist_physpkg_wrf.F90  grist_wrf_data_structure.F90  grist_wrf_physics_update.F90  grist_wrf_radiation_driver.F90  grist_wrf_surface_driver.F90  grist_wv_saturation.F90
GRIST/src-main/atmosphere/physics/amipw_physics/wrflib/bl/: module_bl_camuwpbl_driver.F90  module_bl_gwdo_v381.F90  module_cam_trb_mtn_stress.F90
GRIST/src-main/atmosphere/physics/amipw_physics/wrflib/camrad/: module_cam_shr_const_mod.F90  module_ra_cam.F90
GRIST/src-main/atmosphere/physics/amipw_physics/wrflib/cu/: module_cu_gf_deep_v402.F90
GRIST/src-main/atmosphere/physics/amipw_physics/wrflib/mp/: module_mp_lin_v2.F90  module_mp_morr_two_moment_v381.F90  module_mp_morr_two_moment_v381_ace.F90  module_mp_radar_v381.F90  module_mp_wsm6_v381.F90
GRIST/src-main/atmosphere/physics/amipw_physics/wrflib/sf/: module_sf_slab1.F90
GRIST/src-main/infrastructure/grid/: CMakeLists.txt  grist_config_partition.F90  grist_partition.F90
GRIST/src-main/infrastructure/io/: CMakeLists.txt  bin_read.c  grist_fileio_list_1d_module.F90  grist_fileio_list_2d_module_par.F90
GRIST/src-main/infrastructure/setting/: CMakeLists.txt  grist_data_types.F90
GRIST/src_mixed_new/atmosphere/gcm/: CMakeLists.txt  grist_atmos.F90  grist_gcm_control_driver.F90  grist_gcm_restart_module.F90
GRIST/src_mixed_new/atmosphere/gcm/io_template/: grist_gcm_io_h0_module.F90  grist_gcm_io_h1_module.F90
GRIST/src_mixed_new/infrastructure/utils/: CMakeLists.txt  grist_clocks.F90  grist_svd_module.F90  grist_wrap_mpi.F90
SWGOMP/: .gitignore  Makefile  README.md
SWGOMP/doc/: conf.py  faq.rst  how_worked.rst  index.rst  quickstart.rst
SWGOMP/lib/: Makefile  athread_compat.c  athread_compat.h  compile_flags.txt  compile_test.sh  ftz.c  jobserver.c  jobserver.h  locked-printf.c  omnicopy.F90  omnicopy.c  omnicopy.inc  reduce.c  swdefs.h  swgomp-stack.c  swgomp-stack.h  swgomp.c  swgomp.h  taskarray.c  taskarray.h  tasktree.c  tasktree.h  workshare.c
SWGOMP/playground/: bitmap.c  bug-cache.f90  compile_flags.txt  cond-expr.c  copy.f90  dynsched.c  f90-workshare.f90  mpi_slave_hang.c  nested.c  optional.f90  parallel-for.c  quick.f90  reduction.c  spawn.py  static-chain.c  sw-uncached.c  target-teams.c  team-spawn.c  test.c  test.f90  virtual.cpp
SWGOMP/plugin/: Makefile  compile_flags.txt  devirtualize.cpp  filter.cpp  private-name.cpp  protect-optional.cpp  (+6 more)
demo-g6-aqua/: .Jstack_6088802_202404071041.res  .Jstack_6090523_202404071226.res  .Jstack_6090537_202404071240.res  .Jstack_6209283_202406211007.res  color_swlu.py  comm-6  compute-6  full-6  grist.grid_file.g6.ccvt.0d.nc  grist.nml  grist.nml.ai  grist_amipw_phys.nml.ai  grist_amipw_phys.nml.org  grist_amipw_phys.nml.rad  grist_lsm_noahmp.nml  output-6  run-cpe-dp.sh  run-cpe-mixed.sh  run-mpe-dp.sh  run-mpe-mixed.sh
(+505 files in other folders)
